fix: layout issue

--- a/src/shared/styles/globals.css
+++ b/src/shared/styles/globals.css
@@ -77,7 +77,7 @@
 
 /* Layout template you can use */
 /* It will split the header, main, and footer similar to a hamburger menu */
-#root {
+#__next {
   min-height: 100dvh;
   display: flex;
   flex-direction: column;
